Refactor FQP + Add datafusion